--- a/estilos3.css
+++ b/estilos3.css
@@ -41,7 +41,7 @@ li a:hover:not(.activo)
 }
 h1,h2{
 
-	font-family:"Comic Sans MS", cursive, sans-serif;
+	font-family:"Lobster", "Papyrus", fantasy;
 }
 	
 @font-face
