--- a/Preguntas1.css
+++ b/Preguntas1.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color:#0960e0;
-  --primary-light: #5D4037;
+  --primary-color:#8B3A3A;
+  --primary-light:#E1C7A5;
   --primary-dark: #0494c2;
   --background:#FFF9F0;
   --text-color: #333;
