--- a/Preguntas1.css
+++ b/Preguntas1.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color:#8B3A3A;
   --primary-light:#E1C7A5;
-  --primary-dark: #0494c2;
+  --primary-dark: #5D4037;
   --background:#FFF9F0;
   --text-color: #333;
   --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
