--- a/Preguntas1.css
+++ b/Preguntas1.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color:#8B3A3A;
-  --primary-light:#E1C7A5;
+  --primary-color:#AC0085;
+  --primary-light:#F8DAF1;
   --primary-dark: #5D4037;
   --background:#FFF9F0;
   --text-color: #333;
